[package]
name = "riven"
version = "0.1.1"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
repository = "https://github.com/MingweiSamuel/Riven"
description = "Riot Games API Library"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [ "src/**", "/README.md" ]
keywords = [ "riot-games", "riot", "league", "league-of-legends" ]
categories = [ "api-bindings", "web-programming::http-client" ]

[badges]
travis-ci = { repository = "MingweiSamuel/Riven" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = [ "parking_lot/nightly" ]

[dependencies]
log = "0.4"
num_enum = "0.4"
parking_lot = "0.9"
reqwest = { version = "0.10.0-alpha.1", features = [ "gzip", "json" ] }
scan_fmt = { version = "0.2", default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
strum = "0.16"
strum_macros = "0.16"
tokio = { version = "0.2.0-alpha.6", default-features = false, features = [ "timer" ] }
url = "2.1"
# TODO temp pin.
async-compression = { version = "=0.1.0-alpha.7", default-features = false, features = ["gzip", "stream"], optional = true }

[dev-dependencies]
colored = "1.8"
env_logger = "0.7"
fake_instant = "0.4"
lazy_static = "1.4"
tokio = "0.2.0-alpha.6"
futures-util-preview = "0.3.0-alpha.19"
