[package]
name = "riven"
version = "1.10.3"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
repository = "https://github.com/MingweiSamuel/Riven"
description = "Riot Games API Library"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [ "src/**", "/README.md" ]
keywords = [ "riot-games", "riot", "league", "league-of-legends" ]
categories = [ "api-bindings", "web-programming::http-client" ]

#[badges]
#travis-ci = { repository = "MingweiSamuel/Riven" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = [ "nightly" ]

[features]
nightly = [ "parking_lot/nightly" ]

[dependencies]
lazy_static = "1.4"
log = "0.4"
num_enum = "0.4"
parking_lot = "0.10"
reqwest = { version = "0.10", features = [ "gzip", "json" ] }
scan_fmt = { version = "0.2", default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
strum = "0.17"
strum_macros = "0.17"
tokio = { version = "0.2", default-features = false, features = [ "time" ] }
url = "2.1"

[dev-dependencies]
colored = "1.8"
env_logger = "0.7"
fake_instant = "0.4"
tokio = "0.2"
