[package]
name = "riven_example_proxy"
version = "0.0.0"
authors = [ "Mingwei Samuel <mingwei.samuel@gmail.com>" ]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = [ "server" ] }
lazy_static = "1.4"
riven = { path = "../../riven" }
tokio = { version = "1.0", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
